improved product list
