# backend/food/swagger.yaml
@@ -21,9 +21,11 @@ paths:
       description: "Read the list of products"
       responses:
         200:
-          description: "Successful read product list operation"
+          description: "Successful read product list"
           schema:
             type: object
+            required:
+              - data
             properties:
               data:
                 description: the list of products
@@ -66,8 +68,10 @@ paths:
           default: 1.0
       responses:
         200:
-          description: calories of the serving
+          description: Successful get calories of the serving
           schema:
+            required:
+              - data
             properties:
               data:
                 type: object
@@ -82,6 +86,7 @@ paths:
 definitions:
   Macros:
     type: object
+    description: ficken
     required:
       - fats
       - carbs
@@ -89,15 +94,15 @@ definitions:
     properties:
       fats:
         type: number
-        description: fats
+        description: amount of fats. the measure, i.e. [g] or [kcal], depends on context
         example: 123
       carbs:
         type: number
-        description: fats
+        description: amount of carbs. the measure, i.e. [g] or [kcal], depends on context
         example: 123
       proteins:
         type: number
-        description: fats
+        description: amount of proteins. the measure, i.e. [g] or [kcal], depends on context
         example: 123
 
   Product:
@@ -111,6 +116,20 @@ definitions:
       name:
         type: string
         example: "ei"
+      kcal:
+        description: total calories per 100g as provided by producer
+        type: number
+        example: 256
+      tags:
+        description: tags such as selling store, manufacturer, ...
+        type: string
+        example: "aldi, milbona"
+      macros:
+        description: size distribution among macros [g]
+        $ref: '#/definitions/Macros'
+      calories:
+        description: calorie distribution among macros [kcal]
+        $ref: '#/definitions/Macros'
 
   Pagination:
     type: object
